# byte-knight

./: .gitattributes  .gitignore  Cargo.toml  Justfile  LICENSE  Makefile  README.md  bk-main  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: build_and_test.yml  clippy.yml  coverage.yml  format.yml  machete.yml  macos.yml  release.yml  uci_compliance.yml
board/: bitboard.rs  board.rs  board_state.rs  color.rs  definitions.rs  fen.rs  file.rs  legal_move_generation.rs  lib.rs  magics.rs  move_generation.rs  move_history.rs  move_list.rs  move_making.rs  moves.rs  perft.rs  pieces.rs  rank.rs  square.rs  zobrist.rs
chess/: Cargo.toml  board.rs  board_state.rs  definitions.rs  file.rs  legal_move_generation.rs  lib.rs  magics.rs  move_generation.rs  move_making.rs  moves.rs  perft.rs  pgn.rs  pgn_parse.rs  pieces.rs  rank.rs  side.rs  square.rs  zobrist.rs
chess/benches/: sliding_piece_moves.rs
chess/src/: attacks.rs  bitboard.rs  bitboard_helpers.rs  board.rs  board_state.rs  color.rs  definitions.rs  fen.rs  file.rs  legal_move_generation.rs  lib.rs  magics.rs  move_generation.rs  move_history.rs  move_list.rs  move_making.rs  moves.rs  non_slider_piece.rs  perft.rs  pext.rs  piece_category.rs  pieces.rs  rank.rs  rays.rs  side.rs  slider_pieces.rs  sliding_piece_attacks.rs  square.rs  table.rs  zobrist.rs
data/: Pohl.epd  bishop_magics.csv  lichess-test.book  lichess_db_puzzle.csv.zst  rook_magics.csv  standard.epd
engine/: Cargo.toml
engine/src/: aspiration_window.rs  defs.rs  engine.rs  evaluation.rs  hce_values.rs  history_table.rs  incremental_sort.rs  inplace_incremental_sort.rs  input_handler.rs  killer_moves_table.rs  lib.rs  lmr.rs  log_level.rs  move_order.rs  node_types.rs  ordered_move.rs  pawn_structure.rs  phased_score.rs  principle_variation.rs  psqt.rs  score.rs  search.rs  search_thread.rs  table.rs  traits.rs  tt_table.rs  ttable.rs  tuneable.rs
scripts/: CompareEngines.ps1  batched_execution_pool.py  cache_main.sh  pgn_translate.py  replay.py  reproduce.py  run_cutechess.sh  split-perft.sh
src/: definitions.rs  main.rs
src/board/: bitboard.rs  board.rs  mod.rs  pieces.rs
src/engine/: base_engine.rs  engine.rs  evaluation.rs  evil_bot.rs  mod.rs  search.rs  timer.rs
tests/: board_tests.rs  move_gen.rs
tools/chess-explorer/: Cargo.toml  README.md
tools/chess-explorer/src/: assets.rs  chess_board.rs  main.rs
tools/generate-magics/: Cargo.toml
tools/generate-magics/src/: main.rs
tools/hce-tuner/: Cargo.toml
tools/hce-tuner/src/: epd_parser.rs  main.rs  math.rs  offsets.rs  parameters.rs  tuner.rs  tuner_score.rs  tuning_position.rs
tools/perft-bench/: Cargo.toml
tools/perft-bench/src/: main.rs
tools/qperft/: CMakeLists.txt  build_qperft.sh  log.txt  perft.c
tools/verify-zobrist/: Cargo.toml
tools/verify-zobrist/src/: main.rs
