[package]
name = "byte-knight"
version = "3.0.0"
# 2024 isn't stable yet
edition = "2024"
authors = ["Paul Tsouchlos <developer.paul.123@gmail.com>"]
license = "GPL-3.0"

[workspace]
members = ["engine", "chess"]

[dependencies]
engine = { path = "engine" }
chess = { path = "chess" }
anyhow = "1.0.98"
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
console = { version = "0.15.11", features = ["windows-console-colors"] }
csv = "1.3.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
rand = { version = "0.9.1", features = ["small_rng"] }
rand_chacha = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
textplots = "0.8.7"

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
incremental = false
overflow-checks = false
