[package]
name = "byte-knight"
version = "3.0.0"
# 2024 isn't stable yet
edition = "2024"
authors = ["Paul Tsouchlos <developer.paul.123@gmail.com>"]
license = "GPL-3.0"

[workspace]
members = ["engine", "chess"]

[workspace.dependencies]
anyhow = "1.0.100"
arrayvec = "0.7.6"
chess = { path = "chess" }
clap = "4.5.48"
colored = "3.0.0"
console = "0.16.1"
criterion = "0.7"
csv = "1.3.1"
engine = { path = "engine" }
indicatif = "0.18.0"
itertools = "0.14.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
serde = "1.0.228"
textplots = "0.8.7"
thiserror = "2.0.17"
uci-parser = "1.1.0"

[dependencies]
engine = { workspace = true }
chess = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
console = { workspace = true, features = ["windows-console-colors"] }
csv = { workspace = true }
indicatif = { workspace = true, features = ["rayon"] }
rand = { workspace = true, features = ["small_rng"] }
rand_chacha = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
textplots = { workspace = true }

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
incremental = false
overflow-checks = false
