[package]
name = "byte-knight"
version = "3.0.0"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[workspace]
members = ["engine", "chess", "tools/*"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Paul Tsouchlos <developer.paul.123@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/DeveloperPaul123/byte-knight"

[workspace.dependencies]
anyhow = "1.0.100"
arrayvec = "0.7.6"
chess = { path = "chess" }
clap = "4.5.54"
colored = "3.0.0"
console = "0.16.2"
criterion = "0.8"
csv = "1.4.0"
engine = { path = "engine" }
indicatif = "0.18.3"
itertools = "0.14.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
serde = "1.0.228"
textplots = "0.8.7"
thiserror = "2.0.17"
uci-parser = "1.1.0"

[dependencies]
engine = { workspace = true }
chess = { workspace = true }
clap = { workspace = true, features = ["derive"] }
colored = { workspace = true }
rayon = { workspace = true }

[profile.dev]
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
debug = false
rpath = false
debug-assertions = false
incremental = false
overflow-checks = false
