[package]
name = "chess"
version = "1.0.0"
edition = "2024"

[lib]
name = "chess"
test = true

[dependencies]
anyhow = "1.0.93"
arrayvec = "0.7.6"
rand = { version = "0.9.0", features = ["small_rng"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[[bench]]
name = "sliding_piece_moves"
harness = false
