[package]
name = "chess"
version = "1.0.0"
edition = "2024"

[lib]
name = "chess"
test = true

[dependencies]
anyhow = { workspace = true }
arrayvec = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }

[[bench]]
name = "sliding_piece_moves"
harness = false
