[package]
name = "engine"
version = "2.0.0"
edition = "2024"


[dependencies]
chess = { path = "../chess" }
anyhow = "1.0.93"
itertools = "0.14.0"
uci-parser = { version = "1.1.0", features = [
    "parse-go-perft",
    "parse-position-kiwipete",
    "types",
] }
rand = { version = "0.9.0", features = ["small_rng"] }
arrayvec = "0.7.6"
