[package]
name = "engine"
version = "3.0.0"
edition = "2024"


[dependencies]
chess = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }
uci-parser = { workspace = true, features = ["parse-go-perft", "parse-position-kiwipete", "types", "clamp-negatives"] }
rand = { workspace = true, features = ["small_rng"] }
arrayvec = { workspace = true }
