[package]
name = "chess-explorer"
version = "0.1.0"
edition = "2024"
readme = "README.md"
authors = ["Paul Tsouchlos <developer.paul.123@gmail.com>"]

[features]
gui = []

[dependencies]
chess = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
gpui = "0.2.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"

[[bin]]
name = "chess-explorer"
path = "src/main.rs"
test = false
required-features = ["gui"]